eda files leading to graphs

--- a/d4d_2018_notes.Rmd
+++ b/d4d_2018_notes.Rmd
@@ -14,13 +14,16 @@ knitr::opts_chunk$set(echo = TRUE)
 # Designing for Digital 2018
 
 
+
+## Linked data in libraries is polarizing. Transparency and reproducibility are critical if the results are to be trusted. Towards that end, we are sharing the data in mid-study.
+ 
+
 ## Linked Data in Libraries Feature Study project: https://osf.io/5d32c/  
 
 Includes:  
 * Survey instrument  
 * Email group distribution list  
 * Anonymized and redacted data set  
-
 
 
 
