--- a/eda4.Rmd
+++ b/eda4.Rmd
@@ -29,15 +29,6 @@ library(ggraph)
 
 # load libraries
 # Remove responses with 0 feature total score and normalize(i.e., linked data)
-clean_features_text_v1 <- function(ld_survey) {
-  ld_survey_nonzero <- ld_survey %>%
-    filter(features_total_score > 0)
-  ld_survey_cleaned <- ld_survey_nonzero
-  ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("linked data", ignore_case = TRUE), "linked_data")
-  ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("linked open data", ignore_case = TRUE), "linked_data")
-  ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex(" lod ", ignore_case = TRUE), " linked_data ")
-  return(ld_survey_cleaned)
-}
 
 clean_features_text <- function(ld_survey) {
   ld_survey_nonzero <- ld_survey %>%
@@ -51,8 +42,15 @@ clean_features_text <- function(ld_survey) {
   ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("resource ", ignore_case = TRUE), "resources ")  
   ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("library ", ignore_case = TRUE), "libraries ")  
   ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("author ", ignore_case = TRUE), "authors ")  
+    ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("engine ", ignore_case = TRUE), "engines ")  
+    ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("subject ", ignore_case = TRUE), "subjects ")  
+      ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("bibliographic ", ignore_case = TRUE), "bibliographical ")  
+      ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("catalog ", ignore_case = TRUE), "catalogs ")  
+    ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("item ", ignore_case = TRUE), "items ")  
+    ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("record ", ignore_case = TRUE), "records ")  
+    ld_survey_cleaned$ld_features <- str_replace_all(ld_survey_cleaned$ld_features, regex("article ", ignore_case = TRUE), "articles ")  
 
-    return(ld_survey_cleaned)
+        return(ld_survey_cleaned)
 }
 
 
@@ -104,11 +102,11 @@ bigram_graph <- bigram_counts_separated %>%
 
 
 set.seed(2017)
-a <- grid::arrow(type = "closed", length = unit(.1, "inches"))
+a <- grid::arrow(type = "closed", length = unit(.10, "inches"))
 ggraph(bigram_graph, layout = "fr") +
   geom_edge_link(aes(edge_alpha = n), show.legend = FALSE, arrow = a, end_cap = circle(.07, 'inches')) +
   geom_node_point(color = "lightblue", size = 2) +
-  geom_node_text(aes(label = name), vjust = 1, hjust = 0.5) +
+  geom_node_text(aes(label = name), vjust = 1.5, hjust = 0.5) +
   theme_void()
 
 ggsave(plot = last_plot(), filename = "output/ld_study_bigraph.png", height = 7, width = 10, units = "in", dpi = 300)
